# arcadeshare

./: .env  .gitignore  .test.env  README.md  config.py  docker-compose.yaml  gen_types.py  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: node.js.yml  python-app.yml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx  arcadeAxios.ts  index.tsx  react-app-env.d.ts  serviceWorker.ts
frontend/src/app/: store.ts  types.ts
migrations/versions/: 465bc8d44a39_.py  7a2fe92bb1f7_.py  9190a8965392_.py  ace4bc31cc25_.py
server/: __init__.py
server/admin/: views.py
server/admin/templates/: master_admin.html
server/api/: __init__.py  schemas.py
server/api/device/: api.py  models.py
server/api/feed/: api.py  models.py
server/api/game/: api.py  models.py
server/api/role/: api.py
server/api/tenant/: api.py
server/api/user/: api.py
server/auth/: __init__.py  azure.py  basic_auth.py  google.py  lib.py  models.py  routes.py  schema.py
server/events/: __init__.py  device.py  game_pub.py  tenant.py
server/main/: __init__.py  routes.py
server/tests/: conftest.py  pytest.ini  test_dummy.py  test_mqtt.py  test_tenant.py
server/utils/: __init__.py  decorators.py  storage.py
src/server/: __init__.py  signals.py
volume/cache/: machine.json  service-catalog-1_1_1_dev-1_27_83.pickle  service-catalog-3_5_1_dev-1_34_127.pickle
volume/logs/: localstack_infra.err
volume/state/: startup_info.json
(+90 files in other folders)
