[project]
name = "arcadeshare"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ryan-McClennen", email = "rmcclennen3@gmail.com" }
]
dependencies = [
    "flask>=3.0.3",
    "flask-admin>=1.6.1",
    "flask-mqtt>=1.2.1",
    "flask-apispec>=0.11.4",
    "flask-babelex>=0.9.4",
    "flask-cors>=4.0.1",
    "flask-dance>=7.1.0",
    "flask-jwt-extended>=4.6.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-marshmallow>=1.2.1",
    "flask-migrate>=4.0.7",
    "flask-principal>=0.4.0",
    "flask-restx>=1.3.0",
    "flask-security>=5.5.2",
    "flask-wtf>=1.2.1",
    "setuptools>=72.1.0",
    "psycopg2>=2.9.9",
    "boto3>=1.34.153",
    "python-dotenv>=1.0.1",
    "marshmallow-sqlalchemy>=1.0.0",
    "rpds-py==0.5.3",
    "typemallow2>=0.0.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arcadeshare"]
